# PE-SLAM

./: CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.txt  README.md
Examples/Stereo-Inertial/: stereo_inertial_euroc.cc
include/: FrameDrawer.h  LocalMapping.h  ORBextractor.h  Optimizer.h  Tracking.h  polynomial.h
src/: Frame.cc  FrameDrawer.cc  ImuInitializer.cc  LocalMapping.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  System.cc  Tracking.cc
